Fixed styling making viewport not default 100 percent on mobile

--- a/src/components/AboutMe/style.css
+++ b/src/components/AboutMe/style.css
@@ -19,7 +19,6 @@ p {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 100%;
   height: 100%;
   padding: 1%;
 }
