--- a/src/components/Banner/style.css
+++ b/src/components/Banner/style.css
@@ -1,6 +1,5 @@
 /* Styling for image located under the header */
 img {
-  width: 100%;
   height: 200px;
 }
 
@@ -8,7 +7,6 @@ img {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 100%;
   height: 100px;
   background-color: rgb(49, 49, 49);
   padding-top: 120px;
