--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -54,6 +54,10 @@ footer nav ul li {
     padding-top: 2%;
     padding-bottom: 4%;
   }
+
+  footer h1 {
+    padding-right: 5%;
+  }
 }
 
 @media screen and (max-width: 480px) {
