--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,6 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 100%;
   height: 100%;
   padding: 1%;
 }
@@ -48,7 +47,7 @@ h1 {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 100%;
+  width: 97%;
   height: 100%;
   padding: 1%;
   justify-content: space-between;
@@ -56,7 +55,6 @@ h1 {
 /* Large item inside of the Work Section */
 .work-right .large-work {
   display: flex;
-  width: 100%;
   height: 400px;
   margin-bottom: 3%;
   padding: 5px;
